--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@
                     __libc_start_main(0x8048618, 1, 0xffffd784, 0x80486d0 <unfinished ...>
                         strcmp("h0no33", "kakaka")                       = -1
                         printf("Enter the password> ")                   = 20
-                        fgets(Enter the password> tets
+                        fgets(Enter the password> tests
                         "tets\n", 256, 0xf7fc55a0)                 = 0xffffd590
                         strcmp("tets\n", "snlprintf\n")                  = 1
                         puts("bzzzzzzzzap. WRONG"bzzzzzzzzap. WRONG
